--- a/style.css
+++ b/style.css
@@ -11,4 +11,51 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-image: url("./img/ash-edmonds-DSKuKbVZD38-unsplash.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.card{
+    background-color: #FFF;
+    width: 40rem;
+    border-radius: 1rem;
+    padding: 4rem;
+}
+.main-card{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+}
+.card__title{
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin-bottom: 2rem;
+}
+input{
+    width: 100%;
+    height: 5.5rem;
+    border: 1px solid rgb(0, 187, 255);
+    outline: none;
+    border-radius: .4rem;
+    padding-left: 1rem;
+    margin-bottom: 2rem;
+}
+input::placeholder{
+
+}
+img{
+    display: none;
+}
+.card__btn{
+    border: none;
+    outline: none;
+    width: 100%;
+    border-radius: .4rem;
+    background-color: rgb(95, 63, 237);
+    height: 4.5rem;
+    color: #FFF;
+    cursor: pointer;
+    font-weight: 600;
 }
