Add JavaScript logic and improve Css & Structure

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
     width: 40rem;
     border-radius: 1rem;
     padding: 4rem;
+    transition: all 500ms ease-in;
 }
 .main-card{
     display: flex;
@@ -36,26 +37,38 @@ body{
 input{
     width: 100%;
     height: 5.5rem;
-    border: 1px solid rgb(0, 187, 255);
+    border: 1px solid rgb(95, 63, 237);
     outline: none;
-    border-radius: .4rem;
+    border-radius: .6rem;
     padding-left: 1rem;
-    margin-bottom: 2rem;
 }
-input::placeholder{
-
+.modal{
+    color: rgb(246, 18, 52);
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-weight: 600;
+    display: none;
+}
+.card__image{
+    margin: 0 auto;
+    padding: 1.5rem 1rem;
+    border: 1px solid rgba(42, 46, 47,0.2);
+    border-radius: .6rem;
+    display: none;
+    margin-top: 3rem;
 }
 img{
-    display: none;
+    height: 100%;
 }
 .card__btn{
     border: none;
     outline: none;
     width: 100%;
-    border-radius: .4rem;
+    border-radius: .6rem;
     background-color: rgb(95, 63, 237);
     height: 4.5rem;
     color: #FFF;
     cursor: pointer;
     font-weight: 600;
+    margin-top: 3rem;
 }
